chore: Update file paths for assets and icons

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,6 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
+      "@assets/*": ["./src/assets/*"],
       "@constants/*": ["./src/constants/*"],
       "@components/*": ["./src/components/*"],
       "@interfaces/*": ["./src/interfaces/*"]
