--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "paths": {
         "@assets/*":["./src/assets/*"],
         "@constants/*":["./src/constants/*"],
+        "@helpers/*":["./src/helpers/*"],
         "@components/*":["./src/components/*"],
         "@interfaces/*":["./src/interfaces/*"],
       }
